<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".LoginActivity"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/txt_banner"
        android:src="@drawable/banner" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="300dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/txt_enter_email"
        android:paddingStart="15dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/txt_enter_password"
        android:paddingStart="15dp"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/txt_log_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/txtOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/txt_or"
        android:textColor="@color/brown"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtOr"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/txt_sign_up"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>