<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow"
    android:fitsSystemWindows="true"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imgBanner"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:contentDescription="@string/txt_logo"
        android:src="@drawable/banner" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/imgBanner"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/txt_enter_your_name"
        android:inputType="text"
        android:paddingStart="15dp" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtName"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/txt_enter_your_email_address"
        android:inputType="textEmailAddress"
        android:paddingStart="15dp" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/edtEmail"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/edt_background"
        android:hint="@string/txt_make_a_password"
        android:inputType="textPassword"
        android:paddingStart="15dp" />

    <Button
        android:id="@+id/btnSignup"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edtPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_background"
        android:text="@string/txt_sign_in"
        android:textColor="@color/white"
        android:textSize="20sp" />

</RelativeLayout>